docs: add ChangePasswordHandler api doc
