# controllers/doc_response_models.go
@@ -37,3 +37,7 @@ type _ResponseUpdateTask struct {
 type _ResponseDeleteTask struct {
 	_ResponseSuccess
 }
+
+type _ResponseUpdatePassword struct {
+	_ResponseSuccess
+}
